--- a/React_Version_App/verificador-termos-uso/src/App.css
+++ b/React_Version_App/verificador-termos-uso/src/App.css
@@ -1,38 +1,55 @@
+@font-face {
+  font-family: 'BRSenoma';
+  src: url(../public/Fonts/BRSonoma-ExtraLight.otf) format('otf'),;
+  font-weight: normal;
+  font-style: normal;
+}
+
+html, body {
+  background-color: #ABBFFF;
+  font-family: 'BRSenoma', sans-serif;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.cabecalho {
+  background-color: #ffff;
+  width: 100%;
+  height: 80px;
   align-items: center;
+  display: flex;
+  justify-content: space-around;
+}
+
+.itemCabecalho {
+  color: #D9D9D9;
+  font-weight: bolder;
+}
+
+h1 {
+  color: #ffff;
+  font-weight: lighter;
+  padding: 0;
+  margin: 5px;
+}
+
+textarea {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: justify;
+  border-radius: 10px;
+  border: none;
+  padding: 10px;
+  margin: 0;
+  margin-bottom: 5px;
+  width: 90vw;
+  height: 35vh;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  text-align: center;
 }
