feat: Adiciona funcionalidades e estilos ao aplicativo
- Adiciona estilos personalizados para a barra de rolagem
- Reposiciona o botão de limpar texto para o canto inferior esquerdo do textarea
- Adiciona funcionalidade de rolagem para o textarea
- Atualiza o componente de visualização Markdown para renderizar corretamente as partes marcadas
- Realiza outras modificações de estilo para aprimorar a aparência e usabilidade

Essas modificações melhoram a aparência e a funcionalidade do aplicativo, tornando-o mais fácil de usar e proporcionando uma melhor experiência ao usuário.

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,20 @@ textarea {
   margin-bottom: 5px;
   width: 90vw;
   height: 35vh;
+  overflow-y: 'auto';
+}
+
+textarea::-webkit-scrollbar {
+  width: 12px;
+}
+
+textarea::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
 }
 
 footer {
