--- a/src/components/Cabecalho/Cabecalho.css
+++ b/src/components/Cabecalho/Cabecalho.css
@@ -4,14 +4,19 @@
     height: 80px;
     align-items: center;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .itemCabecalho {
     color: #D9D9D9;
     font-weight: bolder;
-    margin: 0;
+    margin: 0 50px;
     padding: 0;
+}
+.itemCabecalho:hover{
+    color: #a8a8a8;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
 .itemCabecalho img {
@@ -20,3 +25,7 @@
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+    color:inherit;
+}
