--- a/src/components/Delete/Delete.css
+++ b/src/components/Delete/Delete.css
@@ -11,3 +11,17 @@
     bottom: 20px;
     left: 70px;
 }
+
+/* Estilo para telas pequenas */
+@media only screen and (max-width: 600px) {
+    .delete {
+        left: 30px;
+    }
+}
+
+/* Estilo para telas grandes */
+@media only screen and (min-width: 1024px) {
+    .delete {
+        left: 70px;
+    }
+}
